styled the pages and fixed issue with mobile navbar not showing

--- a/static/style/style.css
+++ b/static/style/style.css
@@ -21,13 +21,27 @@ body {
     margin-bottom: 30px;
 }
 
+#home-jumbotron {
+  background-color: #009688 !important;
+  color: #eee;
+}
+
+.btn-primary {
+  background-color: #536DFE;
+}
+
+.navbar-color {
+  background-color: #B2DFDB;
+}
+
 footer {
     /*margin: 50px 0;*/
     position: absolute;
     bottom: 0;
     width: 100%;
     height: 60px;
-    background-color: #f5f5f5;
+    background-color: #00796B;
+    color: #FFFFFF;
 }
 
 .btn-circle {
